--- a/css/showtitle.less
+++ b/css/showtitle.less
@@ -21,158 +21,170 @@
  *  Work: Lead Product Designer @ http://kyruus.com
  */
 @font-face {
-  font-family: 'ShowTitleFontAwesome';
-  src: url('chrome-extension://__MSG_@@extension_id__/font/fontawesome-webfont.woff') format('woff'),
-       url('chrome-extension://__MSG_@@extension_id__/font/fontawesome-webfont.ttf') format('truetype');
+  font-family: "ShowTitleFontAwesome";
+  src: url("chrome-extension://__MSG_@@extension_id__/font/fontawesome-webfont.woff")
+      format("woff"),
+    url("chrome-extension://__MSG_@@extension_id__/font/fontawesome-webfont.ttf")
+      format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 #showtitlewrapper {
-    [class^="icon-"],
-    [class*=" icon-"] {
-      font-family: ShowTitleFontAwesome;
-      font-weight: normal;
-      font-style: normal;
-      text-decoration: inherit;
-      -webkit-font-smoothing: antialiased;
+  [class^="icon-"],
+  [class*=" icon-"] {
+    font-family: ShowTitleFontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    text-decoration: inherit;
+    -webkit-font-smoothing: antialiased;
 
-      display: inline;
-      width: auto;
-      height: auto;
-      line-height: normal;
-      vertical-align: baseline;
-      background-image: none;
-      background-position: 0% 0%;
-      background-repeat: repeat;
-      margin-top: 0;
-    }
+    display: inline;
+    width: auto;
+    height: auto;
+    line-height: normal;
+    vertical-align: baseline;
+    background-image: none;
+    background-position: 0% 0%;
+    background-repeat: repeat;
+    margin-top: 0;
+  }
 
-    [class^="icon-"]:before,
-    [class*=" icon-"]:before {
-      text-decoration: inherit;
-      display: inline-block;
-      speak: none;
-    }
-    .icon-eye-open:before             { content: "\f06e"; }
-    .icon-eye-close:before            { content: "\f070"; }
+  [class^="icon-"]:before,
+  [class*=" icon-"]:before {
+    text-decoration: inherit;
+    display: inline-block;
+    speak: none;
+  }
+  .icon-eye-open:before {
+    content: "\f06e";
+  }
+  .icon-eye-close:before {
+    content: "\f070";
+  }
 
-    .icon-hand-right:before           { content: "\f0a4"; }
-    .icon-hand-left:before            { content: "\f0a5"; }
-    .icon-hand-up:before              { content: "\f0a6"; }
-    .icon-hand-down:before            { content: "\f0a7"; }
+  .icon-hand-right:before {
+    content: "\f0a4";
+  }
+  .icon-hand-left:before {
+    content: "\f0a5";
+  }
+  .icon-hand-up:before {
+    content: "\f0a6";
+  }
+  .icon-hand-down:before {
+    content: "\f0a7";
+  }
 
-    /*  Plugin styles
+  /*  Plugin styles
         ------------------------------------------------------- */
 
-    position: fixed;
-    display: inline-block;
-    margin: 0 auto;
-    height: 18px;
-    padding: 0 5px 0;
-    background-repeat: no-repeat;
-    color: #000 !important;
-    z-index: 9999;
-    font-size: 11px !important;
-    font-family: sans-serif !important;
-    width: auto;
+  position: fixed;
+  display: inline-block;
+  margin: 0 auto;
+  height: 18px;
+  padding: 0 5px 0;
+  background-repeat: no-repeat;
+  color: #000 !important;
+  z-index: 9999;
+  font-size: 11px !important;
+  font-family: sans-serif !important;
+  width: auto;
 
-    background: -webkit-linear-gradient(top,  #efefef 0%,#e0e0e0 100%);
-    border: 1px solid white;
-    box-shadow: 0px 0px 1px #5b5b5b;
+  background: -webkit-linear-gradient(top, #efefef 0%, #e0e0e0 100%);
+  border: 1px solid white;
+  box-shadow: 0px 0px 1px #5b5b5b;
 
-    * {
-        font-size: 11px;
-    }
+  * {
+    font-size: 11px;
+  }
 
-    .tolong {
-        color: #B60202;
-    }
+  .tolong {
+    color: #b60202;
+  }
 
-    #showtitlemove i {
-        display: none;
-    }
-
-    #showtitleremovelink .icon-eye-close,
-    #showtitleremovelink:hover .icon-eye-open {
-        display: none;
-    }
-    #showtitleremovelink:hover .icon-eye-close {
-        display: inline;
-    }
-
-    .link {
-        padding-left: 2px;
-        color: black !important;
-        cursor: pointer;
-    }
-
-    p {
-        margin: 0;
-        padding: 0;
-        line-height: 18px;
-
-        &:last-child {
-            margin-bottom: 0;
-        }
-    }
-
-    &.not-initialized {
+  #showtitlemove i {
     display: none;
+  }
+
+  #showtitleremovelink .icon-eye-close,
+  #showtitleremovelink:hover .icon-eye-open {
+    display: none;
+  }
+  #showtitleremovelink:hover .icon-eye-close {
+    display: inline;
+  }
+
+  .link {
+    padding-left: 2px;
+    color: black !important;
+    cursor: pointer;
+  }
+
+  p {
+    margin: 0;
+    padding: 0;
+    line-height: 18px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &.not-initialized {
+    display: none;
+  }
+
+  &.bottom_left {
+    bottom: -2px;
+    left: -2px;
+    border-top-right-radius: 3px;
+
+    #showtitlemove i.icon-hand-up {
+      display: inline;
+    }
+  }
+
+  &.bottom_right {
+    bottom: -2px;
+    right: -2px;
+    border-top-left-radius: 3px;
+
+    #showtitlemove i.icon-hand-left {
+      display: inline;
+    }
+  }
+
+  &.top_left {
+    top: -2px;
+    left: -2px;
+    border-bottom-right-radius: 3px;
+
+    #showtitlemove i.icon-hand-right {
+      display: inline;
+    }
+  }
+
+  &.top_right {
+    top: -2px;
+    right: -2px;
+    border-bottom-left-radius: 3px;
+
+    #showtitlemove i.icon-hand-down {
+      display: inline;
+    }
+  }
+
+  &.hide {
+    opacity: 0.6;
+
+    &:hover {
+      opacity: 1;
     }
 
-    &.bottom_left {
-        bottom: -2px;
-        left: -2px;
-        border-top-right-radius: 3px;
-
-        #showtitlemove i.icon-hand-up {
-            display: inline;
-        }
-
+    #showtitle-title,
+    #showtitlemove {
+      display: none;
     }
-
-    &.bottom_right {
-        bottom: -2px;
-        right: -2px;
-        border-top-left-radius: 3px;
-
-        #showtitlemove i.icon-hand-left {
-            display: inline;
-        }
-    }
-
-    &.top_left {
-        top: -2px;
-        left: -2px;
-        border-bottom-right-radius: 3px;
-
-        #showtitlemove i.icon-hand-right {
-            display: inline;
-        }
-    }
-
-    &.top_right {
-      top: -2px;
-      right: -2px;
-      border-bottom-left-radius: 3px;
-
-      #showtitlemove i.icon-hand-down {
-          display: inline;
-      }
-    }
-
-
-    &.hide {
-        opacity: 0.6;
-
-        &:hover {
-            opacity: 1;
-        }
-
-        #showtitle-title,
-        #showtitlemove {
-            display: none;
-        }
-    }
+  }
 }
